# dotpick

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
schemas/: clispec-v0.2.json
src/: error.rs  input.rs  lib.rs  main.rs  output.rs  path.rs  project.rs  schema.rs
tests/: cli.rs  conformance.rs  projection.rs  schema.rs
