[package]
name = "dotpick"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Token-minimal field projection over JSON, YAML, TOML and NDJSON. Select fields by dotpath, emit the smallest valid slice. The anti-jq for agents."
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
license = "MIT"
repository = "https://github.com/rvben/dotpick"
homepage = "https://github.com/rvben/dotpick"
keywords = ["jq", "json", "yaml", "projection"]
categories = ["command-line-utilities", "parsing"]
readme = "README.md"

[lib]
name = "dotpick"
path = "src/lib.rs"

[[bin]]
name = "dotpick"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_norway = "0.9.42"
thiserror = "2.0.18"
toml = "1.1.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
